# playground

./: .gitignore
scripts/: build.sh  dockerfile  entrypoint.sh  into.sh  run.sh  start_gui.sh
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: urdf.rviz
src/robot_description/launch/: visualize.launch.py
src/robot_description/meshes/demo/: arm_base_link.stl  body_link2.stl  head_link0.stl  head_link1.stl  head_link2.stl
src/robot_description/xacro/: robot.xacro
